{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 496,
  "lineage": "080c554c-5159-9899-259f-4f351420c24b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "alpha_private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:subnet/subnet-0df926d83a7ba1a6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 250,
            "cidr_block": "172.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df926d83a7ba1a6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296274010522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "IAmImmortal": "True",
              "Name": "eu-west-1-sandbox-vpc-alpha-priv-eu-west-1a",
              "SubnetType": "private"
            },
            "vpc_id": "vpc-01f8cf2855398cc3c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "alpha_private_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:subnet/subnet-0c3bb0b2d113f0f57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "172.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3bb0b2d113f0f57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296274010522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "IAmImmortal": "True",
              "Name": "eu-west-1-sandbox-vpc-alpha-priv-eu-west-1b",
              "SubnetType": "private"
            },
            "vpc_id": "vpc-01f8cf2855398cc3c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "alpha_public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:subnet/subnet-0eeed545965bcc422",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 249,
            "cidr_block": "172.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeed545965bcc422",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296274010522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "IAmImmortal": "True",
              "Name": "eu-west-1-sandbox-vpc-alpha-pub-eu-west-1a",
              "SubnetType": "public"
            },
            "vpc_id": "vpc-01f8cf2855398cc3c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "alpha_public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:subnet/subnet-0aeedf6fc5164356a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "172.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeedf6fc5164356a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296274010522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "IAmImmortal": "True",
              "Name": "eu-west-1-sandbox-vpc-alpha-pub-eu-west-1b",
              "SubnetType": "public"
            },
            "vpc_id": "vpc-01f8cf2855398cc3c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "alpha",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:vpc/vpc-01f8cf2855398cc3c",
            "cidr_block": "172.0.0.0/18",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09fc08185e80eb201",
                "cidr_block": "172.0.0.0/18",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0f1ce26971dcd0ae2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f8cf2855398cc3c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01eecf54066f99489",
            "owner_id": "296274010522",
            "tags": {
              "Environment": "dev",
              "IAmImmortal": "True",
              "Name": "eu-west-1-sandbox-vpc-alpha"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group/sg-01c53539a24d55294",
            "description": "whitestone ec2 sg",
            "egress": [],
            "id": "sg-01c53539a24d55294",
            "ingress": [],
            "name": "whitestone-ec2-sg",
            "name_prefix": "",
            "owner_id": "296274010522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "whitestone-ec2-sg"
            },
            "tags_all": {
              "Name": "whitestone-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f8cf2855398cc3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group/sg-00f6f00f2a6fc94cc",
            "description": "whitestone nlb sg",
            "egress": [],
            "id": "sg-00f6f00f2a6fc94cc",
            "ingress": [],
            "name": "whitestone-nlb-sg",
            "name_prefix": "",
            "owner_id": "296274010522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "whitestone-nlb-sg"
            },
            "tags_all": {
              "Name": "whitestone-nlb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f8cf2855398cc3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "whitestone_ec2_sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group-rule/sgr-0664ae4a640bb1d71",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0664ae4a640bb1d71",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01c53539a24d55294",
            "security_group_rule_id": "sgr-0664ae4a640bb1d71",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_vpc.alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "whitestone_nlb_sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group-rule/sgr-072a65b1ecedc8fa0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-072a65b1ecedc8fa0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00f6f00f2a6fc94cc",
            "security_group_rule_id": "sgr-072a65b1ecedc8fa0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nlb_sg",
            "data.aws_vpc.alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "whitestone_ec2_cidr_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group-rule/sgr-082deb8b4241dbcc5",
            "cidr_ipv4": "102.164.29.248/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-082deb8b4241dbcc5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01c53539a24d55294",
            "security_group_rule_id": "sgr-082deb8b4241dbcc5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_vpc.alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "whitestone_ec2_sg_52222_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group-rule/sgr-0a721e5a00752f36b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 52222,
            "id": "sgr-0a721e5a00752f36b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-00f6f00f2a6fc94cc",
            "security_group_id": "sg-01c53539a24d55294",
            "security_group_rule_id": "sgr-0a721e5a00752f36b",
            "tags": null,
            "tags_all": {},
            "to_port": 52222
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_security_group.nlb_sg",
            "data.aws_vpc.alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "whitestone_ec2_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group-rule/sgr-0fc9a2b21c4f72890",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 36125,
            "id": "sgr-0fc9a2b21c4f72890",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-00f6f00f2a6fc94cc",
            "security_group_id": "sg-01c53539a24d55294",
            "security_group_rule_id": "sgr-0fc9a2b21c4f72890",
            "tags": null,
            "tags_all": {},
            "to_port": 36125
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_security_group.nlb_sg",
            "data.aws_vpc.alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "whitestone_nlb_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group-rule/sgr-0004ff37fb1232fa7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 36125,
            "id": "sgr-0004ff37fb1232fa7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00f6f00f2a6fc94cc",
            "security_group_rule_id": "sgr-0004ff37fb1232fa7",
            "tags": null,
            "tags_all": {},
            "to_port": 36125
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nlb_sg",
            "data.aws_vpc.alpha"
          ]
        }
      ]
    },
    {
      "module": "module.node_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:loadbalancer/net/whitestone-nats-alb/b305fb94535542f5",
            "arn_suffix": "net/whitestone-nats-alb/b305fb94535542f5",
            "dns_name": "whitestone-nats-alb-b305fb94535542f5.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:loadbalancer/net/whitestone-nats-alb/b305fb94535542f5",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "whitestone-nats-alb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c3bb0b2d113f0f57"
              },
              {
                "subnet_id": "subnet-0df926d83a7ba1a6e"
              }
            ],
            "subnets": [
              "subnet-0c3bb0b2d113f0f57",
              "subnet-0df926d83a7ba1a6e"
            ],
            "tags": {
              "Name": "whitestone-nats-alb"
            },
            "tags_all": {
              "Name": "whitestone-nats-alb"
            },
            "vpc_id": "vpc-01f8cf2855398cc3c",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "data.aws_subnet.alpha_private_subnet_1a",
            "data.aws_subnet.alpha_private_subnet_1b",
            "module.node_alb.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.node_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listeners",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "36125",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:listener/net/whitestone-nats-alb/b305fb94535542f5/49052e881221ae92",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:targetgroup/whitestone-nlb-tg-36125/9eb734a3ececcef1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:listener/net/whitestone-nats-alb/b305fb94535542f5/49052e881221ae92",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:loadbalancer/net/whitestone-nats-alb/b305fb94535542f5",
            "port": 36125,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.alpha_private_subnet_1a",
            "data.aws_subnet.alpha_private_subnet_1b",
            "data.aws_vpc.alpha",
            "module.node_alb.aws_lb.loadbalancer",
            "module.node_alb.aws_lb_target_group.lb_target_group",
            "module.node_alb.aws_security_group.load_balancer_security_group"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:listener/net/whitestone-nats-alb/b305fb94535542f5/c1c7442ad90644ac",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:targetgroup/whitestone-nlb-tg-80/337c395ea16d6860",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:listener/net/whitestone-nats-alb/b305fb94535542f5/c1c7442ad90644ac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:loadbalancer/net/whitestone-nats-alb/b305fb94535542f5",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.alpha_private_subnet_1a",
            "data.aws_subnet.alpha_private_subnet_1b",
            "data.aws_vpc.alpha",
            "module.node_alb.aws_lb.loadbalancer",
            "module.node_alb.aws_lb_target_group.lb_target_group",
            "module.node_alb.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.node_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "36125",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:targetgroup/whitestone-nlb-tg-36125/9eb734a3ececcef1",
            "arn_suffix": "targetgroup/whitestone-nlb-tg-36125/9eb734a3ececcef1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthz.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:targetgroup/whitestone-nlb-tg-36125/9eb734a3ececcef1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "whitestone-nlb-tg-36125",
            "port": 36125,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "whitestone-nats-alb"
            },
            "tags_all": {
              "Name": "whitestone-nats-alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01f8cf2855398cc3c"
          },
          "dependencies": [
            "data.aws_vpc.alpha"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "443",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:targetgroup/whitestone-nlb-tg-443/3ef6c8c13dff064a",
            "arn_suffix": "targetgroup/whitestone-nlb-tg-443/3ef6c8c13dff064a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthz.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:targetgroup/whitestone-nlb-tg-443/3ef6c8c13dff064a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "whitestone-nlb-tg-443",
            "port": 443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "whitestone-nats-alb"
            },
            "tags_all": {
              "Name": "whitestone-nats-alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01f8cf2855398cc3c"
          },
          "dependencies": [
            "data.aws_vpc.alpha"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:targetgroup/whitestone-nlb-tg-80/337c395ea16d6860",
            "arn_suffix": "targetgroup/whitestone-nlb-tg-80/337c395ea16d6860",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthz.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:296274010522:targetgroup/whitestone-nlb-tg-80/337c395ea16d6860",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "whitestone-nlb-tg-80",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "whitestone-nats-alb"
            },
            "tags_all": {
              "Name": "whitestone-nats-alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01f8cf2855398cc3c"
          },
          "dependencies": [
            "data.aws_vpc.alpha"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.node_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}